OPENIDM-4258 - Fix overflow on selfservice warning box

--- a/forgerock-ui-commons/src/main/resources/css/common/structure/selfservice.less
+++ b/forgerock-ui-commons/src/main/resources/css/common/structure/selfservice.less
@@ -68,4 +68,8 @@
 
 #processContent {
     padding-bottom: 20px;
+
+    .alert {
+        overflow:scroll;
+    }
 }
